Added link to mushroom-rice.html on index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <li>
             <a href="recipes/tagliatelle-ai-funghi.html">Tagliatelle with Mushrooms</a>
         </li>
-        
+        <li>
+            <a href="recipes/mushroom-rice.html">Easy Mushroom Rice</a>
+        </li>
     </ul>
 </body>
 </html>
