Added initial classes on elements for upcoming css

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipes</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
+<body class="body">
+    <h1 class="title">Odin Recipes</h1>
+    <ul class="list-block">
         <li>
             <a href="recipes/lasagna.html">World's Best Lasagna</a>
         </li>
         <li>
             <a href="recipes/tagliatelle-ai-funghi.html">Tagliatelle with Mushrooms</a>
         </li>
-        <li>
+        <li class="last">
             <a href="recipes/mushroom-rice.html">Easy Mushroom Rice</a>
         </li>
     </ul>
